<resources>
    <string name="app_name">Croquis</string>
    <string name="title_activity_croquis">Map</string>
    <string name="fab_btn_cars">Vehículos</string>
    <string name="fab_btn_signals">Señales</string>
    <string name="fab_btn_traces">Rastros</string>
    <string name="fab_btn_objects">Objetos</string>
    <string name="fab_btn_victims">Victimas</string>
    <string name="croquis_activity_set_marker">Toca el mapa para colocar el marcador</string>
    <string name="croquis_activity_rotate_msg">Mueve la barra para rotar el icono</string>
    <string name="croquis_activity_remove_marker">Remover icono</string>
</resources>
