<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zoomtrack.croquis.CroquisActivity"
    >

    <fragment
        android:name="com.zoomtrack.croquis.CroquisFragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/map"/>

    <LinearLayout
        android:id="@+id/shadow"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical" >

        <LinearLayout
            android:background="@drawable/gradient_background"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:text="@string/croquis_activity_set_marker"
                android:textAlignment="center"
                android:textStyle="bold"
                />
        </LinearLayout>


    </LinearLayout>


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/multiple_actions"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorPrimary"
        app:fab_addButtonPlusIconColor="#FFF"
        app:fab_labelStyle="@style/menu_label_style"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/add_object_btn"
            app:fab_icon="@drawable/ic_objects"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_size="normal"
            app:fab_title="@string/fab_btn_objects"
            >
        </com.getbase.floatingactionbutton.FloatingActionButton>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/add_victim_btn"
            app:fab_icon="@drawable/ic_victim"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_size="normal"
            app:fab_title="@string/fab_btn_victims"
            >
        </com.getbase.floatingactionbutton.FloatingActionButton>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/add_car_btn"
            app:fab_icon="@drawable/ic_car"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_size="normal"
            app:fab_title="@string/fab_btn_cars"
            >
        </com.getbase.floatingactionbutton.FloatingActionButton>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/add_signal_btn"
            app:fab_icon="@drawable/ic_alert"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_size="normal"
            app:fab_title="@string/fab_btn_signals"
            >
        </com.getbase.floatingactionbutton.FloatingActionButton>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/add_trace_btn"
            app:fab_icon="@drawable/ic_traces"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_size="normal"
            app:fab_title="@string/fab_btn_traces"
            >
        </com.getbase.floatingactionbutton.FloatingActionButton>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>
